resolved cmt